Fix align wide in editor #359
Fixes https://github.com/maithemewp/mai-engine/issues/359

--- a/assets/scss/editor.scss
+++ b/assets/scss/editor.scss
@@ -47,16 +47,8 @@ p {
 	max-width: 90%;
 }
 
-.wp-block {
+.wp-block:not([data-align="full"]):not([data-align="wide"]) {
 	max-width: var(--breakpoint-lg);
-
-	&[data-align="wide"] {
-		max-width: var(--breakpoint);
-	}
-
-	&[data-align="full"] {
-		max-width: none;
-	}
 }
 
 .block-editor-block-list__layout {
